--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -4,90 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="perfil.css">
     <title>Perfil do Usuário</title>
 </head>
 <body>
- <div class="container">
-    <div class="main">
-        <div class="topbar">
-            <a href="">logo</a>
-            <a href="">Support</a>
-            <a href="">work</a>
-            <a href="">Home</a>
-        </div>
-        <div class="row">
-            <div class="col-md-4 mt-1">
-                <div class="card text-center sidebar">
-                    <div class="card-body">
-                        <img src="circulo arredondado.png">
-                        <div class="mt-3">
-                            <h3>Gabriel Luz</h3>
-                            <a href="">Home</a>
-                            <a href="">Work</a>
-                            <a href="">Support</a>
-                            <a href="">Setting</a>
-                            <a href="">Signout</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8 mt-1">
-                <div class="card mb-3 content">
-                    <h1 class="m-3 pt-3">About</h1>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Full Name</h5>
-                            </div>
-                            <div class="col-md-9 text-secondary">
-                                Gabriel Luz
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Email</h5>
-                            </div>
-                            <div class="col-md-9 text-secondary">
-                                abc@gmail.com
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Phone</h5>
-                            </div>
-                            <div class="col-md-9 text-secondary">
-                                00923469874656
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Address</h5>
-                            </div>  
-                            <div class="col-md-9 text-secondary">
-                                street no. 4, xvy
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card mb-3 content">
-                    <h1 class="m-3">Recent Projects</h1>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <h5>Project name</h5>
-                            </div>
-                            <div class="col-md-9 text-secondary">
-                                Project Description
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="header">
+    <h1>Perfil</h1>
+    <img class="foto" src="foto.jpg" alt="Foto">
     </div>
- </div>   
+
+    <div class="Informações">
+        <h1>Informações</h1>
+        <span class="negrito">Nome:</span> <p>Gabriel Andrade da Luz</p>
+        <span class="negrito">Idade:</span> <p>17 anos</p>
+        <span class="negrito">CPF:</span> <p>.</p>
+        <span class="negrito">Email:</span> <p>gabriel_andrade-luz@estudante.sesisenai.org.br</p> 
+        <span class="negrito">Localização:</span> <p>Joinville - SC</p>
+    </div>
+
+    <div class="footer">
+        <img src="ico.insta.png" class="ico">
+        <img src="ico.twitter.png" class="ico">
+        <img src="ico.facebook.png" class="ico">
+    </div>
 </body>
 </html>
